--- a/src/app/view-reports/view-reports.component.html
+++ b/src/app/view-reports/view-reports.component.html
@@ -25,3 +25,14 @@
         </div>
     </div>
 </div>
+<script src="https://www.gstatic.com/firebasejs/3.6.4/firebase.js"></script>
+<script>
+    // Initialize Firebase
+    var config = {
+      apiKey: 'AIzaSyATlAnQ_3jK-ZXE_Q93kmC4-RA0Vovcefo',
+      authDomain: 'tomresults-9ddb8.firebaseapp.com',
+      databaseURL: 'https://tomresults-9ddb8.firebaseio.com',
+      storageBucket: 'tomresults-9ddb8.appspot.com',
+      messagingSenderId: '797341562033'
+    };
+</script>
